--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: ci
 on:
-    push:
-      branches:
-          - docs
+  push:
+    branches:
+        - main
 permissions:
   contents: write
 jobs:
