Adicionando portifolio 2 ao mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,4 +19,5 @@ nav:
   - Home: 
     - Sobre os Portifólios: index.md
   - Portifólio 1: portifolios/portifolio1.md
+  - Portifólio 2: portifolios/portifolio2.md
 
