--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,4 +20,5 @@ nav:
     - Sobre os Portifólios: index.md
   - Portifólio 1: portifolios/portifolio1.md
   - Portifólio 2: portifolios/portifolio2.md
+  - Portifólio 3: portifolios/portifolio3.md
 
