--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,4 +21,5 @@ nav:
   - Portifólio 1: portifolios/portifolio1.md
   - Portifólio 2: portifolios/portifolio2.md
   - Portifólio 3: portifolios/portifolio3.md
+  - Portifólio 4: portifolios/portifolio4.md
 
