--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,4 +22,5 @@ nav:
   - Portifólio 2: portifolios/portifolio2.md
   - Portifólio 3: portifolios/portifolio3.md
   - Portifólio 4: portifolios/portifolio4.md
+  - Portifólio 6: portifolios/portifolio6.md
 
